# RFI-1

./: .editorconfig  .gitignore  ACQUISITION_POC_GUIDANCE.md  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  DESIGN_PRINCIPLES.md  Makefile  README.md  RFI_MANIFESTO.md  ROADMAP.md  TASKS.md  pyproject.toml
data/: README.md
docs/: TASK-018-engineering-guidance-artifact-query-contract.md  acquisition-engine.md  acquisition-substrate.md  additional-sec-numbered-form-adapters.md  admin-console-schema-aware-editor.md  admin-preferences.md  application-cli.md  artifact-query-service-and-browser.md  business-concept-catalog-and-admin-console.md  consulting-workspace-and-execution-journal.md  design-baseline.json  design-baseline.md  deterministic-sec-form-10k-retrieval.md  development.md  edgar-acquisition.md  firm-source-profiles-and-acquisition-template.md  framework-task-operating-model.md  governed-retrieval-and-source-browser.md  linux-kernel-mailing-list-intelligence-stream.md  linux-mailing-list-operator-console.md  linux-mailing-list-workflow.md  model-guided-source-grounded-intelligence.md  multiple-artifact-observations.md  operator-guide.md  pull-workflow.md  revisioned-artifact-streams.md  sec-api-acquisition.md  source-objects-and-derived-knowledge.md  sqlite-structured-state-repository.md  storage_architecture_design_draft.md  stream-configuration-and-yaml.md  target-firm-catalog-and-admin-editor.md  task-030-review.md
fixtures/: README.md
scripts/: acquisition_operator.py  build_source_archive.py  check_baseline.py  check_docs.py  edgar_operator.py  quality.py  (+56 more)
(+240 files in other folders)
