[project]
name = "rfi-1"
version = "0.0.0"
description = "Repository-First Intelligence engineering foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "RFI-1 contributors" }]
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
rfi = "rfi.cli:main"

[tool.setuptools.package-data]
rfi = ["admin/*.html", "admin/*.js", "resources/*.yaml"]

[tool.rfi]
source-root = "src"
test-root = "tests"
artifact-root = ".artifacts"
